# just-trie-me

./: .gitignore  .pre-commit-config.yaml  .spelling-wordlist.txt  Cargo.toml  README.md
src/: lib.rs  mod.rs  tokenization.rs
src/immutable/: mod.rs
src/immutable/nodes/: mod.rs  regex.rs  regex_filtered.rs
src/mutable/nodes/: hash.rs  mod.rs  regex.rs  string.rs
src/mutable/nodes/generic/: mod.rs  regex.rs  string.rs
src/nodes/: generic.rs  mod.rs  regex.rs  string.rs
src/tokenization/: boundary.rs  mod.rs
